fix ea vr for names

--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
 						<h2 class="bottom" id="lesson-plan">Victorian Realism, China, and the Politics of Form</h2>
-          	<img src="/img/lesson_plans/uvc_0047-1800px.jpg" srcset="/img/lesson_plans/uvc_0047-1800px.jpg 1800w, /img/lesson_plans/uvc_0047-1650px.jpg 1650w, /img/lesson_plans/uvc_0047-1500px.jpg 1500w, /img/lesson_plans/uvc_0047-1350px.jpg 1350w, /img/lesson_plans/uvc_0047-1200px.jpg 1200w, /img/lesson_plans/uvc_0047-1050px.jpg 1050w, /img/lesson_plans/uvc_0047-900px.jpg 900w, /img/lesson_plans/uvc_0047-750px.jpg 750w, /img/lesson_plans/uvc_0047-600px.jpg 600w, /img/lesson_plans/uvc_0047-450px.jpg 450w, /img/lesson_plans/uvc_0047-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title="Fong, Lai. ”Part of the Bund, Shanghai.“ 1870s, http://hdl.handle.net/10020/2003r22b7. The Getty Research Institute, Clark Worswick collection of photographs of China and Southeast Asia, 2003.R.22-b7.36r. Public domain. See The Getty Research Institutute's “Reproductions and Permissions” (https://www.getty.edu/research/library/using/reproductions_permissions/index.html)."/>
+          	<img src="/img/lesson_plans/uvc_0047-1800px.jpg" srcset="/img/lesson_plans/uvc_0047-1800px.jpg 1800w, /img/lesson_plans/uvc_0047-1650px.jpg 1650w, /img/lesson_plans/uvc_0047-1500px.jpg 1500w, /img/lesson_plans/uvc_0047-1350px.jpg 1350w, /img/lesson_plans/uvc_0047-1200px.jpg 1200w, /img/lesson_plans/uvc_0047-1050px.jpg 1050w, /img/lesson_plans/uvc_0047-900px.jpg 900w, /img/lesson_plans/uvc_0047-750px.jpg 750w, /img/lesson_plans/uvc_0047-600px.jpg 600w, /img/lesson_plans/uvc_0047-450px.jpg 450w, /img/lesson_plans/uvc_0047-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title="Lai Fong. ”Part of the Bund, Shanghai.“ 1870s, http://hdl.handle.net/10020/2003r22b7. The Getty Research Institute, Clark Worswick collection of photographs of China and Southeast Asia, 2003.R.22-b7.36r. Public domain. See The Getty Research Institutute's “Reproductions and Permissions” (https://www.getty.edu/research/library/using/reproductions_permissions/index.html)."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -132,19 +132,19 @@
 							<section  aria-labelledby="primary-1">
 								<h5 id="primary-1">Primary Texts</h5>
 								
-								<p>Duxiu, Chen. “On Literary Revolution.” 1917. <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 140–45.<br/>
+								<p>Chen Duxiu. “On Literary Revolution.” 1917. <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 140–45.<br/>
 									<span class="annotation">This manifesto originally appeared in <em>New Youth </em>/ <em>La Jeunesse</em> (新青年), a literary magazine published from 1915 to 1926 by the co-founder of the Communist party, Chen Duxiu. It is one of Chen Duxiu’s most well-known short essays that influenced the New Culture / May Fourth Movement and pairs well with Shu-Mei Shih’s chapter on Occidentalism. Chen Duxiu’s work situates Europe’s literary tradition as foundational for revolutionary politics – referencing English thinkers and writers including Francis Bacon, Charles Darwin, Dickens, and Oscar Wilde – and makes several arguments for abandoning Chinese traditional literature for a “reform of literature.”</span>
 								</p>
 
-								<p>Qichao, Liang. “On the Relationship Between Fiction and the Government of the People.” 1902. <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 74–81.<br/>
+								<p>Liang Qichao. “On the Relationship Between Fiction and the Government of the People.” 1902. <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 74–81.<br/>
 									<span class="annotation">The journalist Liang Qichao’s “On the Relationship Between Fiction and the Government of the People” pairs well with Chen Duxiu’s “On Literary Revolution” as an impactful essay for the New Culture / May Fourth Movement that shaped an argument to turn to realist forms in addition to what Liang Qichao would term <em>xin xiaoshuo </em>/ “new fiction” (新小說). Liang Qichao’s essay directly tackles questions of how and why a literary revolution is important for renovating politics and the cultural value of literature.</span>
 								</p>
 
-								<p>Xun, Lu. “Fragmentary Recollections.” 1928. <em>Dawn Blossoms Plucked at Dusk /</em><em>《朝花夕拾》</em>, Foreign Languages Press, 1976, pp. 69–79.<br/>
+								<p>Lu Xun. “Fragmentary Recollections.” 1928. <em>Dawn Blossoms Plucked at Dusk /</em><em>《朝花夕拾》</em>, Foreign Languages Press, 1976, pp. 69–79.<br/>
 									<span class="annotation">“Fragmentary Recollections” is an expanded biographical essay by the purported father of Chinese modernism, Lu Xun, on how he became a literary writer. The essay explores his early interest in Victorian scientific writing, particularly that of T. H. Huxley. The work is a more detailed version of the famous preface to Lu Xun’s short story collection <em>Call to Arms / Nahan</em> (吶喊), which is often read in literary courses. In the earlier preface to <em>Call to Arms</em> and in “Fragmentary Recollections,” Lu Xun provides a counter to the more optimistic and idealistic essays by Chen Duxiu and Liang Qichao. (For the preface, see Lu Xun, “Preface to the First Collection of Short Stories, ‘Call to Arms.’” <em>Selected Stories of Lu Hsun</em>, W. W. Norton, 2003, pp. 1–6.).</span>
 								</p>
 								
-								<p>Yang, Zhou. “Thoughts on Realism.” 1936. <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 335–44.<br/>
+								<p>Zhou Yang. “Thoughts on Realism.” 1936. <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 335–44.<br/>
 									<span class="annotation">Zhou Yang was an important Marxist literary theorist of the 1930s who was often at odds with the so-called father of Modern Chinese literature, Lu Xun. In “Thoughts on Realism,” originally published in the journal <em>Culture </em>(文學), Zhou Yang provides a literary history and analysis of realist practices that could be read in place of and/or alongside Marston Anderson’s introduction to <em>The Limits of Realism.</em></span>
 								</p>
 							</section>
@@ -198,11 +198,11 @@
 							<section  aria-labelledby="primary-2">
 								<h5 id="primary-2">Primary Texts</h5>
 
-								<p>Shu, Lin. “Preface to <em>Oliver Twist</em>.” <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 82–83.<br/>
+								<p>Lin Shu. “Preface to <em>Oliver Twist</em>.” <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 82–83.<br/>
 									<span class="annotation">This very short introduction to the first translation of <em>Oliver Twist</em> by perhaps one of the most well-known translators of the era would pair well with a reading of Dickens’s original novel. Lin Shu’s Chinese translation of the title <em>Oliver Twist</em> is <em>Zeishi / A History of Thieves </em>(賊史).</span>
 								</p>
 
-								<p>Shu, Lin. “Preface to Part One of <em>David Copperfield</em>.” <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 84–86.<br/>
+								<p>Lin Shu. “Preface to Part One of <em>David Copperfield</em>.” <em>Modern Chinese Literary Thought: Writings on Literature, 1893-1945</em>, edited by Kirk A. Denton, Stanford University Press, 1996, pp. 84–86.<br/>
 									<span class="annotation">This short introduction to the translation of <em>David Copperfield</em> would pair well with a reading of Dickens’s novel. Lin Shu’s Chinese translation of the title <em>David Copperfield</em> is <em>Kuairou yushengshu / The Story of My Life as an Orphan </em>(塊肉餘生述, <em>The Story of My Life as a Piece of Meat </em>is a more literal translation).</span>
 								</p>
 							</section>
@@ -272,7 +272,7 @@
 									<span class="annotation">Written nearly contemporaneously with Dickens’s work, Gogol’s short story centers on a government clerk, Poprishchin, who slowly goes mad.</span>
 								</p>
 
-								<p>Xun, Lu. “A Madman’s Diary.” <em>Selected Stories of Lu Hsun</em>, W. W. Norton, 2003, pp. 7–18.<br/>
+								<p>Lu Xun. “A Madman’s Diary.” <em>Selected Stories of Lu Hsun</em>, W. W. Norton, 2003, pp. 7–18.<br/>
 									<span class="annotation">Inspired by Gogol’s “Diary of a Madman,” Lu Xun’s short story centers on an unnamed young man who suffers a “persecution complex” that causes him to believe society revolves around the cannibalization of people.</span>
 								</p>
 							</section>
@@ -320,11 +320,11 @@
 							<section  aria-labelledby="primary-4">
 								<h5 id="primary-4">Primary Texts</h5>
 
-								<p>Dafu, Yu. “Sinking.” <em>The Columbia Anthology of Modern Chinese Literature</em>, edited by Joseph S. M. Lau and Howard Goldblatt, translated by Joseph S. M. Lau and C. T. Hsia, 2nd ed, Columbia University Press, 2007, pp. 31–55.<br/>
+								<p>Yu Dafu. “Sinking.” <em>The Columbia Anthology of Modern Chinese Literature</em>, edited by Joseph S. M. Lau and Howard Goldblatt, translated by Joseph S. M. Lau and C. T. Hsia, 2nd ed, Columbia University Press, 2007, pp. 31–55.<br/>
 									<span class="annotation">Yu Dafu’s novella explores the personal history of a male Chinese student experiencing a crisis of sexuality while studying abroad in Japan, as many writers of the Chinese modernist movement did in the early 1910s and 1920s. The protagonist of <em>Sinking </em>makes references to many nineteenth-century authors, including William Wordsworth, Ralph Waldo Emerson, Henry David Thoreau, Friedrich Nietzsche, Heinrich Heine, Gogol, and George Gissing as well as the tradition of Romanticism and the French naturalistic novel.</span>
 								</p>
 
-								<p>She, Lao. <em>Mr. Ma and Son / </em><em>《二馬》</em>. 1929. Translated by Julie Jimmerson, Wai wen chu ban she / Foreign Languages Press, 2010.<br/>
+								<p>Lao She. <em>Mr. Ma and Son / </em><em>《二馬》</em>. 1929. Translated by Julie Jimmerson, Wai wen chu ban she / Foreign Languages Press, 2010.<br/>
 									<span class="annotation">Lao She’s novel centers around a father, Ma Zeren, and son, Ma Wei, who move to London during the Edwardian period to take over an antique shop left to them by Ma Zeren’s deceased brother. The novel contemplates how British serial publications and media have depicted Chinese people and culture and is partially autobiographical as Lao She himself worked in London as a lecturer of Chinese literature and culture at the University of London’s School of Oriental Studies from 1924 to 1929. Lao She spent much of his spare time reading the works of his two favorite authors, Dickens and Joseph Conrad, in the school’s library.</span>
 								</p>
 							</section>
@@ -364,7 +364,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Fong, Lai. ”<a href="http://hdl.handle.net/10020/2003r22b7">Part of the Bund, Shanghai</a>.“ 1870s. The Getty Research Institute, Clark Worswick collection of photographs of China and Southeast Asia, 2003.R.22-b7.36r. Public domain. See The Getty Research Institutute's “<a href="https://www.getty.edu/research/library/using/reproductions_permissions/index.html">Reproductions and Permissions</a>.”</p>
+						<p>Lai Fong. ”<a href="http://hdl.handle.net/10020/2003r22b7">Part of the Bund, Shanghai</a>.“ 1870s. The Getty Research Institute, Clark Worswick collection of photographs of China and Southeast Asia, 2003.R.22-b7.36r. Public domain. See The Getty Research Institutute's “<a href="https://www.getty.edu/research/library/using/reproductions_permissions/index.html">Reproductions and Permissions</a>.”</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
