--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -226,12 +226,12 @@
 									<span class="annotation">This source must be read in conjunction with Meredith’s <em>The Egoist. </em>Chang’s chapter on “Plate” traces a material history of porcelain china, speaking to Romantic poetic satires on blue and white china; the evolution of the willow pattern and Meredith’s <em>The Egoist</em>; and James Abbott McNeill Whistler’s and Dante Gabriel Rossetti’s roles as artists and collectors of blue and white porcelain. Chang reveals how a “Chinese story” gets produced and becomes recognizable as a British domestic product.</span>
 								</p>
 
-								<p>Goethe, Johann Wolfgang von, et al. “<a href="http://archive.org/details/conversationsgo02oxengoog">Wednesday, January 31, 1827</a>.” <em>Conversations of Goethe with Eckermann and Soret</em>, translated by John Oxenford, Smith, Elder &amp; Co., 1850, pp. 348–54. <em>Internet Archive</em><br/>
+								<p>Goethe, Johann Wolfgang von, et al. “<a href="http://archive.org/details/conversationsgo02oxengoog">Wednesday, January 31, 1827</a>.” <em>Conversations of Goethe with Eckermann and Soret</em>, translated by John Oxenford, Smith, Elder &amp; Co., 1850, pp. 348–54. <em>Internet Archive</em>.<br/>
 									<span class="annotation">The transcribed conversations and accounts of Goethe’s conversations with Eckermann serve as the source for the origins of the term <em>Weltliteratur </em>or “world literature.” Oxenford’s English translation of these conversations provokes contemplation on world literature’s emergence into public discourse during the Victorian era.</span>
 								</p>
 
 								<p>Meredith, George. <em>The Egoist</em>. 1879. Edited by George Woodcock, Penguin, 1993.<br/>
-									<span class="annotation">This text should be read paired with Elizabeth Hope Chang’s chapter on “Plate” from <em>Britain’s Chinese Eyes</em>. Meredith’s long novel follows the heroine Clara Middleton’s attempts to break off an engagement from the narcissistic Sir Willoughby Patterne; her narrative is imagined in relation to the supposed Chinese story of paternal cruelty behind the blue willow plate pattern commonly found on porcelain china of the era. Set in an upper-class Victorian country home, the novel challenges notions of Englishness, gender politics, and class.</span>
+									<span class="annotation">This text should be read paired with Elizabeth Hope Chang’s chapter on “Plate” from <em>Britain’s Chinese Eye</em>. Meredith’s long novel follows the heroine Clara Middleton’s attempts to break off an engagement from the narcissistic Sir Willoughby Patterne; her narrative is imagined in relation to the supposed Chinese story of paternal cruelty behind the blue willow plate pattern commonly found on porcelain china of the era. Set in an upper-class Victorian country home, the novel challenges notions of Englishness, gender politics, and class.</span>
 								</p>
 							</section>
 
@@ -280,11 +280,11 @@
 							<section  aria-labelledby="secondary-3">
 								<h5 id="secondary-3">Secondary Texts</h5>
 
-								<p>Freedgood, Elaine.  “Preface: Worlds Enough.” <em>Worlds Enough: The Invention of Realism in the Victorian Novel</em>, Princeton University Press, 2019, pp. ix–xviii.<br/>
+								<p>Freedgood, Elaine.  “Preface: Worlds Enough”; “Introduction: How Victorian Novels Became Realistic (in a French Way), Reactionary, and Great.” <em>Worlds Enough: The Invention of Realism in the Victorian Novel</em>, Princeton University Press, 2019, pp. ix–xviii; 1–33.<br/>
 									<span class="annotation">Freedgood’s historical account of the literary critical directions that have led to the way we read and think about realism now is invaluable for thinking about the very odd generic and formal structures of the three stories on madmen by Dickens, Gogol, and Lu Xun.</span>
 								</p>
 
-								<p>Tang, Xiaobing. “<a href="https://doi.org/10.2307/462876">Lu Xun’s ‘Diary of a Madman’ and a Chinese Modernism</a>.” <em>PMLA</em>, vol. 107, no. 5, Oct. 1992, pp. 1222–34. <em>Cambridge University Press</em><br/>
+								<p>Tang, Xiaobing. “<a href="https://doi.org/10.2307/462876">Lu Xun’s ‘Diary of a Madman’ and a Chinese Modernism</a>.” <em>PMLA</em>, vol. 107, no. 5, Oct. 1992, pp. 1222–34. <em>Cambridge University Press</em>.<br/>
 									<span class="annotation">One of the best critical readings of Lu Xun’s “A Madman’s Diary” in English, Tang’s article questions how readers may approach thinking of Lu Xun’s work in terms of a “modernist” text and thus possibly subscribing the work to a Western cultural hegemony. Tang’s close readings attend to the linguistic play of Lu Xun’s story and opens up a consideration of the kind of translingual practices that do and can shape the production of realist fiction.</span>
 								</p>
 							</section>
@@ -364,7 +364,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Lai Fong. ”<a href="http://hdl.handle.net/10020/2003r22b7">Part of the Bund, Shanghai</a>.“ 1870s. The Getty Research Institute, Clark Worswick collection of photographs of China and Southeast Asia, 2003.R.22-b7.36r. Public domain. See The Getty Research Institutute's “<a href="https://www.getty.edu/research/library/using/reproductions_permissions/index.html">Reproductions and Permissions</a>.”</p>
+						<p>Lai Fong. “<a href="http://hdl.handle.net/10020/2003r22b7">Part of the Bund, Shanghai</a>.” 1870s. The Getty Research Institute, Clark Worswick collection of photographs of China and Southeast Asia, 2003.R.22-b7.36r. Public domain. See The Getty Research Institutute's “<a href="https://www.getty.edu/research/library/using/reproductions_permissions/index.html">Reproductions and Permissions</a>.”</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
