--- a/html/lesson_plans/east_asia_psychoactive_revolution.html
+++ b/html/lesson_plans/east_asia_psychoactive_revolution.html
@@ -168,7 +168,7 @@
 
 								<p>Gaskell, Elizabeth. <em>Cranford</em>. 1853. Oxford University Press, 2011.</p>
 
-								<p>Lin, Zexu. “Letter to the Queen of England, from the High Imperial Commissioner Lin, and His Colleagues.” <em>The Chinese Repository</em>, vol. 8, no. 10, Feb. 1840, pp. 497–503.</p>
+								<p>Lin Zexu. “Letter to the Queen of England, from the High Imperial Commissioner Lin, and His Colleagues.” <em>The Chinese Repository</em>, vol. 8, no. 10, Feb. 1840, pp. 497–503.</p>
 							</section>
 
 							<section aria-labelledby="secondary-2">
@@ -237,7 +237,7 @@
 
 								<p>Wilde, Oscar. <em>The Picture of Dorian Gray</em>. 1897. Oxford University Press, 2006.</p>
 
-								<p>Zhang, Changjia. “Opium Talk.” <em>The Fall of the God of Money: Opium Smoking in Nineteenth-Century China</em>, by Keith McMahon, translated by Keith McMahon, Rowman and Littlefield Publishers, 2002, pp. 193–215.</p>
+								<p>Zhang Changjia. “Opium Talk.” <em>The Fall of the God of Money: Opium Smoking in Nineteenth-Century China</em>, by Keith McMahon, translated by Keith McMahon, Rowman and Littlefield Publishers, 2002, pp. 193–215.</p>
 							</section>
 
 							<section aria-labelledby="secondary-4">
