--- a/html/lesson_plans/east_asia_psychoactive_revolution.html
+++ b/html/lesson_plans/east_asia_psychoactive_revolution.html
@@ -162,13 +162,13 @@
 							<section aria-labelledby="primary-2">
 								<h5 id="primary-2">Primary Texts</h5>
 
-								<p>Gutzlaff, Charles. <a href="http://hdl.handle.net/2027/hvd.32044004497566"><em>Journal of Three Voyages along the Coast of China in 1831, 1832, and 1833, with Notices of Siam, Corea, and the Loo-Choo Islands</em></a>. Frederick Westley and A. H. Davis, 1834. <em>In particular, see chapters 2 and 3 of “Journal of the First Voyage” (pp. 67–152) and chapter 5 of “Journal of the Second Voyage” (pp. 276–315).</em></p>
-
 								<p>Fortune, Robert. <a href="https://hdl.handle.net/2027/nyp.33433082425665"><em>A Journey to the Tea Countries of China; Including Sung-Lo and the Bohea Hills; with a Short Notice of the East India Company’s Tea Plantations in the Himalaya Mountains</em></a>. John Murray, 1852. <em>In particular, see chapters 10–15 (pp. 182–271).</em></p>
 
 								<p>Gaskell, Elizabeth. <em>Cranford</em>. 1853. Oxford University Press, 2011.</p>
 
-								<p>Lin Zexu. “Letter to the Queen of England, from the High Imperial Commissioner Lin, and His Colleagues.” <em>The Chinese Repository</em>, vol. 8, no. 10, Feb. 1840, pp. 497–503.</p>
+								<p>Gutzlaff, Charles. <a href="http://hdl.handle.net/2027/hvd.32044004497566"><em>Journal of Three Voyages along the Coast of China in 1831, 1832, and 1833, with Notices of Siam, Corea, and the Loo-Choo Islands</em></a>. Frederick Westley and A. H. Davis, 1834. <em>In particular, see chapters 2 and 3 of “Journal of the First Voyage” (pp. 67–152) and chapter 5 of “Journal of the Second Voyage” (pp. 276–315).</em></p>
+
+								<p>Lin Zexu. “<a href="https://hdl.handle.net/2027/hvd.32044005277884">Letter to the Queen of England, from the High Imperial Commissioner Lin, and His Colleagues</a>.” <em>The Chinese Repository</em>, vol. 8, no. 10, Feb. 1840, pp. 497–503.</p>
 							</section>
 
 							<section aria-labelledby="secondary-2">
@@ -193,14 +193,14 @@
             <section aria-labelledby="materials-3">
               <h4 id="materials-3">Addiction and Racialization</h4>
 
-							<p>This section looks at the intersection of substance use and racialization in English literary texts. The materials and questions focus on substances’ transformative effects, that is, how white characters are racialized, rather than how non-white identities are stereotyped in writings about addiction. As, from Thomas De Quincey to Robert Louis Stevenson, white addicts are respectively identified as Asian-like, animal-like, or deformed, the distinction between the white and the non-white in depictions of drug abusers was gradually blurred in the nineteenth century. Making the deformed other a doppelgänger or a part of the self, writings about addiction challenge racial classification and the concept of race by showing the possibility of whiteness being contaminated.</p>
+							<p>This section looks at the intersection of substance use and racialization in English literary texts. The materials and questions focus on substances’ transformative effects, that is, how white characters are racialized, rather than how non-white identities are stereotyped in writings about addiction. As, from Thomas De Quincey to Robert Louis Stevenson, white addicts were identified as Asian-like, animal-like, or deformed, the distinction between the white and the non-white in depictions of drug abusers was gradually blurred in the nineteenth century. Making the deformed other a doppelgänger or a part of the self, writings about addiction challenge racial classification and the concept of race by showing the possibility of whiteness being contaminated.</p>
 
 							<section aria-labelledby="primary-3">
 								<h5 id="primary-3">Primary Texts</h5>
 
 								<p>De Quincey, Thomas. “Confessions of an English Opium-Eater.” 1821. <em>Confessions of an English Opium-Eater and Other Writings</em>, Penguin Books, 2003, pp. 3–88.</p>
 
-								<p>Dickens, Charles. <em>The Mystery of Edwin Drood</em>. Penguin Books, 1985.</p>
+								<p>Dickens, Charles. <em>The Mystery of Edwin Drood</em>. 1870. Penguin Books, 1985.</p>
 
 								<p>Le Fanu, J. Sheridan. “Green Tea.” 1872. <em>Green Tea: And Other Weird Stories</em>, Oxford University Press, 2020, pp. 96–124.</p>
 
@@ -237,7 +237,7 @@
 
 								<p>Wilde, Oscar. <em>The Picture of Dorian Gray</em>. 1897. Oxford University Press, 2006.</p>
 
-								<p>Zhang Changjia. “Opium Talk.” <em>The Fall of the God of Money: Opium Smoking in Nineteenth-Century China</em>, by Keith McMahon, translated by Keith McMahon, Rowman and Littlefield Publishers, 2002, pp. 193–215.</p>
+								<p>Zhang Changjia. “Opium Talk.” 1878. <em>The Fall of the God of Money: Opium Smoking in Nineteenth-Century China</em>, by Keith McMahon, translated by Keith McMahon, Rowman and Littlefield Publishers, 2002, pp. 193–215.</p>
 							</section>
 
 							<section aria-labelledby="secondary-4">
