--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>Victorian Realism, China, and the Politics of Form | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="a.	Explores Chinese perspectives on Victorian novels to destabilize the received understanding of these texts as epistemologically and politically neutral."/>
+		<meta name="description" content="Explores Chinese perspectives on Victorian novels to destabilize the received understanding of these texts as epistemologically and politically neutral."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
