--- a/html/lesson_plans/east_asia_japanese_aesthetics.html
+++ b/html/lesson_plans/east_asia_japanese_aesthetics.html
@@ -135,7 +135,7 @@
 								<h5 id="mitford">A.B. Mitford, <em>Tales of Old Japan</em></h5>
 
 								<section aria-labelledby="primary-1">
-									<h6 id="primary-1">Primary Sources</h6>
+									<h6 id="primary-1">Primary Source</h6>
 										<p>Mitford, A.B. <em>Tales of Old Japan</em>. 1871. Dover Publications, 2005.<br/>
 											<span class="annotation"><em>Suggested Extracts:</em> “The 47 Rōnins,” “Concerning Certain Superstitions,” “The Vampire Cat of Nabeshima”</span>
 										</p>
