--- a/html/lesson_plans/east_asia_japanese_aesthetics.html
+++ b/html/lesson_plans/east_asia_japanese_aesthetics.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
 						<h2 class="bottom" id="lesson-plan">Japanese Aesthetics: British Perceptions and Japanese Responses</h2>
-          	<img src="/img/lesson_plans/uvc_0048-1800px.jpg" srcset="/img/lesson_plans/uvc_0048-1800px.jpg 1800w, /img/lesson_plans/uvc_0048-1650px.jpg 1650w, /img/lesson_plans/uvc_0048-1500px.jpg 1500w, /img/lesson_plans/uvc_0048-1350px.jpg 1350w, /img/lesson_plans/uvc_0048-1200px.jpg 1200w, /img/lesson_plans/uvc_0048-1050px.jpg 1050w, /img/lesson_plans/uvc_0048-900px.jpg 900w, /img/lesson_plans/uvc_0048-750px.jpg 750w, /img/lesson_plans/uvc_0048-600px.jpg 600w, /img/lesson_plans/uvc_0048-450px.jpg 450w, /img/lesson_plans/uvc_0048-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Caprice in traditional Japansese dress, seated and examining one of several illustrations, with gold screen in background." title="Whistler, James McNeill. “Caprice in Purple and Gold: The Golden Screen.” 1864, https://asia.si.edu/object/F1904.75a/. Smithsonian National Museum of Asian Art, F1904.75a. CC0 - Creative Commons (CC0 1.0). Smithsonian Terms of Use (https://www.si.edu/termsofuse)."/>
+          	<img src="/img/lesson_plans/uvc_0048-1800px.jpg" srcset="/img/lesson_plans/uvc_0048-1800px.jpg 1800w, /img/lesson_plans/uvc_0048-1650px.jpg 1650w, /img/lesson_plans/uvc_0048-1500px.jpg 1500w, /img/lesson_plans/uvc_0048-1350px.jpg 1350w, /img/lesson_plans/uvc_0048-1200px.jpg 1200w, /img/lesson_plans/uvc_0048-1050px.jpg 1050w, /img/lesson_plans/uvc_0048-900px.jpg 900w, /img/lesson_plans/uvc_0048-750px.jpg 750w, /img/lesson_plans/uvc_0048-600px.jpg 600w, /img/lesson_plans/uvc_0048-450px.jpg 450w, /img/lesson_plans/uvc_0048-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Caprice in traditional Japansese dress, seated and examining one of several illustrations, with gold screen in background." title="Whistler, James McNeill. “Caprice in Purple and Gold: The Golden Screen.” 1864, https://asia.si.edu/object/F1904.75a/. Smithsonian National Museum of Asian Art, F1904.75a. Creative Commons (CC0 1.0). Smithsonian Terms of Use (https://www.si.edu/termsofuse)."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -62,7 +62,7 @@
 						<div class="specs-container">
 							<p><strong>Developer:</strong> Waiyee Loh <a class="mail" href="mailto:waiyee-loh@kanagawa-u.ac.jp?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
-							<p><strong>Collaborating Peer Reviewers:</strong> Menglu Gao, Waiyee Loh, Hyungji Park, Jessica R. Valdez, Rae X. Yan</p>
+							<p><strong>Collaborating Peer Reviewers:</strong> Menglu Gao, Hyungji Park, Jessica R. Valdez, Rae X. Yan</p>
 							
 							<p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
@@ -192,6 +192,7 @@
 										<p>Cortazzi, Hugh, editor. <em>Mitford’s Japan: Memories and Recollections, 1866–1906</em>. Routledge, 2013.</p>
 									</section>
 								</section>
+							</section>
 						</section>
 
             <section aria-labelledby="materials-2">
@@ -209,7 +210,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Whistler, James McNeill. “<a href="https://asia.si.edu/object/F1904.75a/">Caprice in Purple and Gold: The Golden Screen</a>.” 1864. Smithsonian National Museum of Asian Art, F1904.75a. CC0 - Creative Commons (CC0 1.0). <a href="https://www.si.edu/termsofuse">Smithsonian Terms of Use</a>.</p>
+						<p>Whistler, James McNeill. “<a href="https://asia.si.edu/object/F1904.75a/">Caprice in Purple and Gold: The Golden Screen</a>.” 1864. Smithsonian National Museum of Asian Art, F1904.75a. Creative Commons (CC0 1.0). <a href="https://www.si.edu/termsofuse">Smithsonian Terms of Use</a>.</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
