--- a/html/lesson_plans/east_asia_japanese_aesthetics.html
+++ b/html/lesson_plans/east_asia_japanese_aesthetics.html
@@ -377,7 +377,7 @@
 							
 									<ul>
 										<li>British Aestheticism</li>
-										<li>: European fascination with Japanese art and culture</li>
+										<li>European fascination with Japanese art and culture</li>
 										<li>British Aestheticism’s perception of Japanese aesthetics as pure formalism</li>
 										<li>Feminine images of Japan</li>
 									</ul>
