--- a/html/lesson_plans/east_asia_japanese_aesthetics.html
+++ b/html/lesson_plans/east_asia_japanese_aesthetics.html
@@ -133,7 +133,7 @@
 						<p>To help instructors who may not have specialist knowledge of the topics covered here, this lesson plan highlights key historical events that provide the context for examining Britain and Japan’s relations from 1853 to 1945. The lesson plan also supplements each primary text with recommended secondary sources that will enable instructors to obtain basic background knowledge of the major historical events and figures discussed. While this lesson plan has been designed with upper-level undergraduates in mind, I have included optional readings that instructors might assign if they use this material in a graduate course.</p>
 					</section>
 
-          <section aria-labelledby="materials">
+          <section class="british-japanese" aria-labelledby="materials">
 						<h3 id="materials">Suggested Materials</h3>
 
             <section aria-labelledby="materials-1">
