--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -101,13 +101,15 @@
 
 						<p>The goal of this lesson plan is to produce debate and reassess assumptions about the centrality and representational authority of the Victorian novel through engaging Chinese contexts. Reading across literary fiction, essays, historical contexts, and literary critical work from Asian Studies, this module expands the geographical and temporal boundaries of Victorian Studies to, as Freedgood argues, “restore the full oddness of the nineteenth-century novel” (x).</p>
 
-						<p>Overarching Questions:</p>
-						<ol>
-							<li>What are the historical contexts that prompted Chinese writers and thinkers to analyze Victorian realist perspective?</li>
-							<li>How did Chinese writers understand and challenge concepts of realism?</li>
-							<li>What happens to the Victorian novel in China?</li>
-						</ol>
-					</section>
+						<section aria-labelledby="central-questions">
+							<h4>Central Questions</h4>
+							
+							<ol>
+								<li>What are the historical contexts that prompted Chinese writers and thinkers to analyze Victorian realist perspective?</li>
+								<li>How did Chinese writers understand and challenge concepts of realism?</li>
+								<li>What happens to the Victorian novel in China?</li>
+							</ol>
+						</section>
 
           <section aria-labelledby="structure">
 						<h3 id="structure">Structure and Organization</h3>
