--- a/html/lesson_plans/east_asia_japanese_aesthetics.html
+++ b/html/lesson_plans/east_asia_japanese_aesthetics.html
@@ -478,7 +478,7 @@
 										<li>Japanese responses to British perceptions of Japan</li>
 										<li>Japanese aesthetics and pan-Asianism</li>
 										<li>Okakura’s critique of Westernization and Western imperialism</li>
-										<li>zational discourse and Japan’s “world-historical” mission</li>
+										<li>Civilizational discourse and Japan’s “world-historical” mission</li>
 										<li>“Old Japan” as the foundation of “New Japan”</li>
 										<li>Japanese imperialism</li>
 										<li>Masculine images of Japan</li>
