--- a/html/lesson_plans/east_asia_chinese_migration.html
+++ b/html/lesson_plans/east_asia_chinese_migration.html
@@ -153,7 +153,11 @@
 								<p>Said, Edward. <em>Orientalism</em>. Pantheon Books, 1978.</p>
 							</section>
 
-							<p><em>Note: This introductory unit might also include a theoretical and historical background on British conceptions of China and relations with the Qing government. For a useful overview on foreign relations and interventions in China in the nineteenth century, see Bickers, Robert. </em>The Scramble for China: Foreign Devils in the Qing Empire, 1832–1914<em>. Allen Lane, 2011.</em></p>
+							<section aria-labelledby="note-1">
+								<h5 id="note-1">Note for Instructors</h5>
+
+								<p><em> This introductory unit might also include a theoretical and historical background on British conceptions of China and relations with the Qing government. For a useful overview on foreign relations and interventions in China in the nineteenth century, see Bickers, Robert. </em>The Scramble for China: Foreign Devils in the Qing Empire, 1832–1914<em>. Allen Lane, 2011.</em></p>
+							</section>
 						</section>
 
 						<hr/>
@@ -195,7 +199,10 @@
 								</ol>
 							</section>
 
-							<p><em>Note: This unit might also include a brief overview of the history of opium and the China trade (which was deeply linked to India, specifically Calcutta) as a means of providing context for the objects addressed by Chang and Freedgood. For a good overview, see Julia Lovell, </em>The Opium War: Drugs, Dreams and the Making of China<em>, Picador, 2012.</em></p>
+							<section aria-labelledby="note-2">
+								<h5 id="note-2">Note for Instructors</h5>
+								
+								<p><em>This unit might also include a brief overview of the history of opium and the China trade (which was deeply linked to India, specifically Calcutta) as a means of providing context for the objects addressed by Chang and Freedgood. For a good overview, see Julia Lovell, </em>The Opium War: Drugs, Dreams and the Making of China<em>, Picador, 2012.</em></p>
 						</section>
 
 						<hr/>
