--- a/html/lesson_plans/east_asia_chinese_migration.html
+++ b/html/lesson_plans/east_asia_chinese_migration.html
@@ -104,7 +104,7 @@
 						<p>This lesson plan explores the interconnections between Chinese migration and other forms of migration and movement, working across the Pacific and Atlantic contexts. In doing so, it draws upon scholarship in Asian American Studies, Black Studies, China Studies, and Postcolonial Studies to interrogate the boundaries of Victorian Studies. Students will evaluate the contours of the category “Victorian” as well as the imbrication of genre, form, and material culture in the way we imagine migration and trade in the nineteenth century.</p>						
 						
 						<section aria-labelledby="central-questions">
-							<h4>Central Questions</h4>
+							<h4 id="central-questions">Central Questions</h4>
 							
 							<ol>
 								<li>What is “Victorian,” and what is the field’s relationship to China Studies, Asian American Studies, Postcolonial Studies, and other related fields of study?</li>
