--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -102,7 +102,7 @@
 						<p>The goal of this lesson plan is to produce debate and reassess assumptions about the centrality and representational authority of the Victorian novel through engaging Chinese contexts. Reading across literary fiction, essays, historical contexts, and literary critical work from Asian Studies, this module expands the geographical and temporal boundaries of Victorian Studies to, as Freedgood argues, “restore the full oddness of the nineteenth-century novel” (x).</p>
 
 						<section aria-labelledby="central-questions">
-							<h4>Central Questions</h4>
+							<h4 id="central-questions">Central Questions</h4>
 							
 							<ol>
 								<li>What are the historical contexts that prompted Chinese writers and thinkers to analyze Victorian realist perspective?</li>
