--- a/html/lesson_plans/east_asia_chinese_migration.html
+++ b/html/lesson_plans/east_asia_chinese_migration.html
@@ -51,7 +51,7 @@
 
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
-						<h2 class="bottom" id="lesson-plan">Chinese Migration and Forms of Global Circulation</h2>
+						<h2 id="lesson-plan">Chinese Migration and Forms of Global Circulation</h2>
           	<img src="/img/lesson_plans/uvc_0049-1800px.jpg" srcset="/img/lesson_plans/uvc_0049-1800px.jpg 1800w, /img/lesson_plans/uvc_0049-1650px.jpg 1650w, /img/lesson_plans/uvc_0049-1500px.jpg 1500w, /img/lesson_plans/uvc_0049-1350px.jpg 1350w, /img/lesson_plans/uvc_0049-1200px.jpg 1200w, /img/lesson_plans/uvc_0049-1050px.jpg 1050w, /img/lesson_plans/uvc_0049-900px.jpg 900w, /img/lesson_plans/uvc_0049-750px.jpg 750w, /img/lesson_plans/uvc_0049-600px.jpg 600w, /img/lesson_plans/uvc_0049-450px.jpg 450w, /img/lesson_plans/uvc_0049-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Harbour with steam and sailing ships in foreground, warehouses in background, mountains in distance." title="Anonymous. “Hong Kong and Victoria Peak Circa 1855.” c.1855, https://commons.wikimedia.org/wiki/File:Hong_Kong_and_Victoria_Peak_Circa_1855.jpg. Wikimedia Commons. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
