--- a/html/lesson_plans/east_asia_chinese_migration.html
+++ b/html/lesson_plans/east_asia_chinese_migration.html
@@ -331,7 +331,7 @@
 								<section aria-labelledby="primary-5">
 									<h5 id="primary-5">Primary Source</h5>
 
-									<p>Catton, Eleanor. <em>The Luminaries</em>. Granta, 2013.<br/>
+									<p>Catton, Eleanor. <em>The Luminaries</em>. Granta, 2013. <em>In particular, see pp. 257–62 and 445–59.</em><br/>
 										<span class="annotation">While Catton’s novel primarily focuses on the gold rush in nineteenth-century New Zealand, these excerpts include the story of Sook Yongsheng, a character who migrated to New Zealand from Guangdong province.</span>
 									</p>
 								</section>
@@ -340,7 +340,7 @@
 									<h5 id="secondary-5">Secondary Sources</h5>
 
 									<p>Hu, Jane. “Orientalism, Redux.” <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 460–73.<br/>
-										<span class="annotation">Drawing upon Hayot’s account of the “hypothetical Mandarin,” Hu analyzes the “aesthetic afterlife” of nineteenth-century British orientalism, particularly Dickens’s “demented … Mandarin,” in contemporary Asian Anglophone culture.</span>
+										<span class="annotation">Drawing upon Hayot’s account of the “hypothetical Mandarin,” Hu analyzes the “aesthetic afterlife” of nineteenth-century British orientalism, particularly Dickens’s “demented … Mandarin,” in contemporary Asian Anglophone culture (460).</span>
 									</p>
 
 									<p>Moy, Olivia Loksing. “Reading in the Aftermath: An Asian American Jane Eyre.” <em>Victorian Studies</em>, vol. 62, no. 3, Spring 2020, pp. 406–18.<br/>
