--- a/html/lesson_plans/east_asia_chinese_migration.html
+++ b/html/lesson_plans/east_asia_chinese_migration.html
@@ -123,7 +123,7 @@
 						<p>The introductory unit opens with Eric Hayot’s <em>The Hypothetical Mandarin: Sympathy, Modernity, and Chinese Pain</em> and the construction of China as the ultimate “other” in western writings from the Enlightenment onwards. It then redirects attention to Chinese objects, their global production and circulation, and their symbolic significance in everyday Victorian life. This section draws upon work by Freedgood and Elizabeth Hope Chang to analyze what Chang calls the “familiar exotic” in select nineteenth-century texts; then, students will consider the narratives constructed around actual nineteenth-century objects in a local or virtual museum. The following units examine constructions of the individual subject and Chinese migration as well as the composite genres and forms that were shaped by these debates. The final unit considers the ongoing “aesthetic afterlife” of nineteenth-century British Orientalism and approaches to complicating that afterlife, whether through historical fiction or literary criticism.</p>
 					</section>
 
-          <section aria-labelledby="materials">
+          <section class="british-japanese" aria-labelledby="materials">
 						<h3 id="materials">Suggested Materials</h3>
 
             <section aria-labelledby="materials-1">
