--- a/html/lesson_plans/east_asia_chinese_migration.html
+++ b/html/lesson_plans/east_asia_chinese_migration.html
@@ -132,7 +132,7 @@
 							<section aria-labelledby="primary-1">
 								<h5 id="primary-1">Primary Source</h5>
 
-								<p class="rtejustify">Collins, Wilkie. “Chapter III, The Second Epoch: The Story Continued by Marian Halcombe.” 1860. <a href="https://www.gutenberg.org/files/583/583-h/583-h.htm"><em>The Woman in White</em></a>, Project Gutenberg, 2008.<br/>
+								<p>Collins, Wilkie. “Chapter III, The Second Epoch: The Story Continued by Marian Halcombe.” 1860. <a href="https://www.gutenberg.org/files/583/583-h/583-h.htm"><em>The Woman in White</em></a>, Project Gutenberg, 2008.<br/>
 									<span class="annotation">In this excerpt, Marian Halcombe uses the example of China to assert what she believes to be British values. Speaking to the Italian villain Count Fosco, she insists, “we have one unquestionable virtue in England which is wanting in China. The Chinese authorities kill thousands of innocent people on the most frivolous pretexts. We in England are free from all guilt of that kind – we commit no such dreadful crime – we abhor reckless bloodshed with all our hearts.” In response, Count Fosco offers Marian and Laura some French bon-bons from “a pretty little inlaid box,” suggesting through these objects the hypocrisy and ignorance of Marian’s claims.</span>
 								</p>
 							</section>
