--- a/html/lesson_plans/east_asia_transimperial_introduction.html
+++ b/html/lesson_plans/east_asia_transimperial_introduction.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Transimperial Networks: East Asia and the “Victorian” World</h2>
-						<img src="/img/lesson_plans/uvc_0051-1800px.jpg" srcset="/img/lesson_plans/uvc_0051-1800px.jpg 1800w, /img/lesson_plans/uvc_0051-1650px.jpg 1650w, /img/lesson_plans/uvc_0051-1500px.jpg 1500w, /img/lesson_plans/uvc_0051-1350px.jpg 1350w, /img/lesson_plans/uvc_0051-1200px.jpg 1200w, /img/lesson_plans/uvc_0051-1050px.jpg 1050w, /img/lesson_plans/uvc_0051-900px.jpg 900w, /img/lesson_plans/uvc_0051-750px.jpg 750w, /img/lesson_plans/uvc_0051-600px.jpg 600w, /img/lesson_plans/uvc_0051-450px.jpg 450w, /img/lesson_plans/uvc_0051-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/>
+						<img src="/img/lesson_plans/uvc_0051-1800px.jpg" srcset="/img/lesson_plans/uvc_0051-1800px.jpg 1800w, /img/lesson_plans/uvc_0051-1650px.jpg 1650w, /img/lesson_plans/uvc_0051-1500px.jpg 1500w, /img/lesson_plans/uvc_0051-1350px.jpg 1350w, /img/lesson_plans/uvc_0051-1200px.jpg 1200w, /img/lesson_plans/uvc_0051-1050px.jpg 1050w, /img/lesson_plans/uvc_0051-900px.jpg 900w, /img/lesson_plans/uvc_0051-750px.jpg 750w, /img/lesson_plans/uvc_0051-600px.jpg 600w, /img/lesson_plans/uvc_0051-450px.jpg 450w, /img/lesson_plans/uvc_0051-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="World map showing a large inner continent, China, surrounded the rest of the world as outer islands." title="Anonymous. “‘Cheonhado’ World Map.” c.1800, https://www.bl.uk/collection-items/cheonhado-world-map. British Library, Maps C.27.f.14. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 					
@@ -94,12 +94,13 @@
 					<!-- <section aria-labelledby="works-cited">
 						<h3 id="works-cited">Works Cited</h3>
 
-					</section>
+					</section> -->
 
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-					</section> -->
+						<p>Anonymous. “<a href="https://www.bl.uk/collection-items/cheonhado-world-map">‘Cheonhado’ World Map.</a>” c.1800. British Library, Maps C.27.f.14. Public domain.</p>
+					</section>
 
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
