--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -15,7 +15,7 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="manifest" href="/site.webmanifest"/>
 		<link rel="preload" as="style" href="/css/style.css?=newVers_0003" onload="this.rel='stylesheet'"/>
-		<link rel="preload" as="style" href="/css/cluster.css?=newVers_0003" onload="this.rel='stylesheet'"/>
+		<link rel="preload" as="style" href="/css/cluster.css?=newVers_0004" onload="this.rel='stylesheet'"/>
 		<link rel="preload" as="font" type="font/woff2" crossorigin href="/fonts/jacksilver-webfont.woff2"/>
 		<link rel="preload" as="font" type="font/woff" crossorigin href="/fonts/jacksilver-webfont.woff"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin/> 
@@ -23,7 +23,7 @@
 		<link rel="preconnect" as="script" href="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"/>
 		<link rel="preload" as="script" href="/js/scripts.js?=newVers_0002"/>
 		<link rel="stylesheet" type="text/css" href="/css/style.css?=newVers_0003"/>
-		<link rel="stylesheet" type="text/css" href="/css/cluster.css?=newVers_0003"/>
+		<link rel="stylesheet" type="text/css" href="/css/cluster.css?=newVers_0004"/>
 		<script>
 			// Hides fallback nav so that it only appears if Javascript disabled
 			function addStyle(styles){var css=document.createElement('style');if(css.styleSheet){css.styleSheet.cssText=styles}else{css.appendChild(document.createTextNode(styles))}document.getElementsByTagName("head")[0].appendChild(css)}var styles='nav#navFB{display:none !important;visibility:hidden !important}';window.onload=function(){addStyle(styles)};
@@ -58,14 +58,26 @@
 					<p>These lesson plans are organized in clusters around specific themes and aim to provide instructors with recommended texts (primary and secondary), critical questions, and pedagogical approaches that can be used in the classroom. We view these lesson plans as sources of inspiration that help us reimagine Victorian Studies with our students, as we continue to undiscipline ourselves and our field.</p>
 				</section>
 
+				<section aria-labelledby="east-asia-1">
+					<h2 id="east-asia-1">Transimperial Networks in East Asia #1</h2>
+					<div><a href="/html/lesson_plans/east_asia_transimperial_introduction.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0051-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0051-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0051-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0051-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0051-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0051-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0051-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0051-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0051-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="" title=""/><span>Cluster Introduction</span></a></div>
+				</section>
+
+				<section aria-labelledby="east-asia-2">
+					<h2 id="east-asia-2">Transimperial Networks in East Asia #2</h2>
+					<ul>
+						<li>Lesson Plans</li>
+						<li><a href="/html/lesson_plans/east_asia_psychoactive_revolution.html">Psychoactive Revolution and Transnational Networks</a></li>
+						<li><a href="/html/lesson_plans/east_asia_japanese_aesthetics.html">Japanese Aesthetics</a></li>
+						<li><a href="/html/lesson_plans/east_asia_visualizing_korea.html">Visualizing Korea</a></li>
+						<li><a href="/html/lesson_plans/east_asia_chinese_migration.html">Chinese Migration and Forms of Global Circulation</a></li>
+						<li><a href="/html/lesson_plans/east_asia_victorian_realism.html">Victorian Realism, China, and the Politics of Form</a></li>
+					</ul>
+				</section>
+
 				<section aria-labelledby="seacole-1">
 					<h2 id="seacole-1">Mary Seacole and the Caribbean #1</h2>
 					<div><a href="/html/lesson_plans/seacole_caribbean_introduction.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0008-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0008-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0008-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0008-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0008-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0008-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0008-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0008-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0008-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Kingston harbor with a few sailboats visible in the background." title="Kingston from Harbor. 1891, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. MonoVisions Black & White Photography Magazine. Public domain."/><span>Cluster Introduction</span></a></div>
-				</section>
-
-				<section aria-labelledby="africa-1">
-					<h2 id="africa-1">Africa, Diaspora, and the British Empire #1</h2>
-					<div><a href="/html/lesson_plans/africa_diaspora_empire_introduction.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0007-1324px.jpg" srcset="/img/lesson_plans/tiles/uvc_0007-1324px.jpg 1324w, /img/lesson_plans/tiles/uvc_0007-1136px.jpg 1136w, /img/lesson_plans/tiles/uvc_0007-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0007-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0007-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0007-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0007-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0007-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0007-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0007-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="White cloth wrapper with brownish black stamped patterns in thirty-five rectangular panels." title="Anonymous Asante Artist. Wrapper. Mid-late nineteenth century, https://africa.si.edu/collections/objects/8582/wrapper?ctx=65a356ddbacf3a7d0a21a8f266e1d934898d46eb&idx=0. Textile and Fiber Arts, Smithsonian National Musem of African Art, 83-3-8. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act."/><span>Cluster Introduction</span></a></div>
 				</section>
 
 				<section aria-labelledby="seacole-2">
@@ -77,6 +89,11 @@
 						<li><a href="/html/lesson_plans/seacole_recentering_nursing.html">Recentering Nursing in Wartime</a></li>
 						<li><a href="/html/lesson_plans/seacole_decolonizing_heathcare.html">Decolonizing Health(care)</a></li>
 					</ul>
+				</section>
+
+				<section aria-labelledby="africa-1">
+					<h2 id="africa-1">Africa, Diaspora, and the British Empire #1</h2>
+					<div><a href="/html/lesson_plans/africa_diaspora_empire_introduction.html"><img loading="lazy" src="/img/lesson_plans/tiles/uvc_0007-1324px.jpg" srcset="/img/lesson_plans/tiles/uvc_0007-1324px.jpg 1324w, /img/lesson_plans/tiles/uvc_0007-1136px.jpg 1136w, /img/lesson_plans/tiles/uvc_0007-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0007-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0007-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0007-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0007-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0007-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0007-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0007-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="White cloth wrapper with brownish black stamped patterns in thirty-five rectangular panels." title="Anonymous Asante Artist. Wrapper. Mid-late nineteenth century, https://africa.si.edu/collections/objects/8582/wrapper?ctx=65a356ddbacf3a7d0a21a8f266e1d934898d46eb&idx=0. Textile and Fiber Arts, Smithsonian National Musem of African Art, 83-3-8. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act."/><span>Cluster Introduction</span></a></div>
 				</section>
 
 				<section aria-labelledby="africa-2">
