--- a/html/lesson_plans/east_asia_victorian_realism.html
+++ b/html/lesson_plans/east_asia_victorian_realism.html
@@ -66,7 +66,7 @@
 							
 							<p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
-							<p><strong>Cluster Title:</strong> Transimperial Networks: East Asia and the “Victorian” World</p>
+							<p><strong>Cluster Title:</strong> Transimperial Networks and East Asia</p>
 
 							<p><strong>Publication Date:</strong> 2022</p>
 						</div>
